se crea seccion de contador

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+.text-pink {
+  color: #dd969c;
+}
+
+.text-gray {
+  color: #757575;
+}
+
 #banner {
   height: 100vh;
   width: 100%;
@@ -17,7 +25,7 @@
 .banner {
   background-image: url("../img/rg-xv-foto-rosa-1-s.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position-y: -400px;
   background-size: cover;
 }
 .banner::before {
@@ -47,7 +55,46 @@ h1 {
   height: 550px;
   background-image: url("../img/rg-cerezo-flores-top.png");
   background-repeat: repeat-x;
-  background-position: top;
+  background-position-y: -100px;
   display: flex;
   align-items: center;
+}
+
+.bg-img {
+  height: 650px;
+  background-image: url("../img/rg-xv-foto-rosa-4-s.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  -webkit-backdrop-filter: blur(10px) !important;
+          backdrop-filter: blur(10px) !important;
+}
+.bg-img::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #121212;
+  opacity: 0.5;
+  position: absolute;
+}
+
+.padrinos {
+  height: auto;
+  background-image: url("../img/rg-background-rosa-destellos-h.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-blur {
+  background: transparent !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+          backdrop-filter: blur(10px) !important;
+  border: 1px solid rgba(255, 255, 255, 0.1) !important;
+  overflow: hidden;
 }/*# sourceMappingURL=style.css.map */
